@@ -68,6 +68,7 @@ Chronological list of authors
   - Balasubramanian
   - Mattia F. Palermo
   - Utkarsh Saxena
+  - Abhinav Gupta
 
 External code
 -------------
