@@ -66,6 +66,7 @@ Chronological list of authors
   - Hai Nguyen
 2016
   - Balasubramanian
+  - Abhinav Gupta
 
 External code
 -------------
